'general cleaning of code'

--- a/tango_nginx.conf
+++ b/tango_nginx.conf
@@ -33,6 +33,6 @@ server {
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /home/monolux/ngin/tango/django/uwsgi_params; # the uwsgi_params file you installed
+        include     /home/monolux/ngin/tango/django/uwsgi_params; 
     }
 }
