--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-dj-database-url==0.4.1
 Django==1.11
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==3.3.0
-requests==2.9.1
-mysqlclient>=0
+uwsgi > 0
 pillow>=0
